# hanfont-compress

./: .gitignore  README.md  agent.md  pyproject.toml  result_small.html  run_hfc.bat  run_hfc.ps1  test.html
docs/: technical-design.md  try.md
scripts/: demo.py
src/hfc/: __init__.py  cli.py  component_library.py  component_matcher.py  composite_encoder.py  compressor.py  decomposer.py  glyph_extractor.py  hfc_encoder.py  human_reviewer.py  reconstructor.py  renderer.py  route_a.py  route_b.py  route_c.py
tests/: __init__.py  smoke_webui.py  test_component_library.py  test_component_matcher.py  test_glyph_extractor.py  test_hfc_encoder.py  test_human_reviewer.py  test_reconstructor.py  test_renderer.py
webui/: server.py
webui/templates/: index.html
